# view

./: .gitignore  README.md  README_CN.7z  README_CN.md  README_EN.md  build.sh
backend/: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
backend/examples/: sql.txt  sync_all.rs  sync_all_fast.rs
backend/src/: binance_collector.rs  database.rs  error.rs  historical_downloader.rs  klinechart.rs  lib.rs  main.rs  scheduler.rs  structs.rs  tradingview.rs
backend/tests/: connection_test.rs  database_test.rs  scheduler_test.rs  sync_full_history_test.rs  sync_test.rs
frontend/: .env.example  README.md  auth-config.js  auth.js  docker-compose.yml  index.html  login.html  serve.py
frontend/scripts/examples/: cm-macd-colorblind.example.js
