[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]

binance-sdk = { version = "35.0.0", features = ["derivatives_trading_usds_futures", "spot"] }
rand = "0.9"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }

axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }

dotenv = "0.15.0"
json = "0.12.4"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = {version = "1.48.0", features = ["full"] }
env_logger = "0.11"
reqwest = { version = "0.12", features = ["stream"] }
zip = "2.2"
chrono = "0.4"
csv = "1.3"
futures = "0.3"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }